# freelss

./: README.md
src/: CMakeLists.txt  Laser.cpp  Makefile  OpenCVCamera.cpp  OpenCVCamera.h  SardauHardware.cpp  SardauHardware.h  Setup.cpp  TurnTable.cpp  WebContent.cpp
src/core/: Calibrator.cpp  Config.h  CriticalSection.cpp  Facetizer.cpp  FileWriter.cpp  Image.cpp  Image.h  ImageProcessor.cpp  LaserResultsMerger.cpp  LocationMapper.cpp  MemWriter.cpp  ObjectBaseCreator.cpp  PixelLocationWriter.cpp  PlyWriter.cpp  Preset.cpp  Preset.h  PresetManager.cpp  Progress.cpp  PropertyReaderWriter.cpp  Scanner.cpp  Setup.cpp  StlWriter.cpp  Thread.cpp  Utils.cpp  Utils.h  XyzWriter.cpp
src/gui/: freelss_uifiles.pro  freelssmainwindow.cpp  freelssmainwindow.h  freelssmainwindow.ui  freelssmainwindow.ui.autosave  main.cpp
src/hardware/: A4988TurnTable.cpp  A4988TurnTable.h  Camera.cpp  Camera.h  Laser.cpp  Laser.h  Lighting.cpp  Lighting.h  MmalImageStore.cpp  MmalImageStore.h  MmalStillCamera.cpp  MmalStillCamera.h  MmalVideoCamera.cpp  MmalVideoCamera.h  MockCamera.cpp  OpenCVCamera.cpp  OpenCVCamera.h  RaspistillCamera.cpp  RelayLaser.cpp  RelayLaser.h  SardauHardware.cpp  TurnTable.cpp
src/webapp/: HttpServer.cpp  Main.cpp  Main.h  UpdateManager.cpp  WebContent.cpp  WifiConfig.cpp
